--- a/index.html
+++ b/index.html
@@ -1,46 +1,72 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Firmware Webflasher</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap">
-    <style>
-        html {
-            font-family: 'Space Grotesk', sans-serif;
-        }
-        body {
-            margin: 0;
-            padding: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            background-color: #F4F5F4;
-            color: #131413;
-            gap: 32px;
-        }
-    </style>
-    <script type="module" src="https://unpkg.com/esp-web-tools@9/dist/web/install-button.js?module"></script>
-</head>
+    <head>
+        <title>Firmware Webflasher</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap">
+        <script type="module" src="https://unpkg.com/esp-web-tools/dist/web/install-button.js?module"></script>
 
-<body>
+        <style>
+            html {
+                font-family: 'Space Grotesk', sans-serif;
+            }
+            body {
+                margin: 0;
+                padding: 20px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                height: 100vh;
+                background-color: #F4F5F4;
+                color: #131413;
+                gap: 32px;
+            }
 
-<div class="main">
-  <div class="w3-display-middle">
-    <h1 class="w3-center w3-jumbo w3-animate-top">Sentinel Companion Webflasher</h1>
-      <p class="w3-center">Make sure to close anything using your devices com port (e.g. Serial monitor)</p>
+            .main{
+                display: flex;
+                flex-direction: column;
+                gap: 8px;
+                align-items: center;
+                justify-content: center;
+            }
 
-    <div class="w3-center w3-padding-24">
-        <esp-web-install-button manifest="firmware/manifest.json">
-            <button slot="activate" class="w3-button w3-green w3-round-xxlarge w3-padding-large">Connect</button>
-            <span slot="unsupported">Ah snap, your browser doesn't work!</span>
-            <span slot="not-allowed">Ah snap, you are not allowed to use this on HTTP!</span>
-        </esp-web-install-button>
-    </div>
-</div>
+            .heading {
+                margin: 0;
+            }
 
-</body>
+            .subheading {
+                margin: 0;
+            }
+
+            .btn{
+                background-color: #2EB263;
+                border: none;
+                border-radius: 100px;
+                color: white;
+                padding: 24px 48px;
+                font-size: 24px;
+            }
+
+            .btn:hover {
+                background-color: #196136;
+            }
+        </style>
+    </head>
+
+    <body>
+        <div class="main">
+            <h1 class="heading">Sentinel Companion Webflasher</h1>
+            <p class="subheading">Make sure to close anything using your devices com port (e.g. Serial monitor)</p>
+        </div>
+        
+        <div class="">
+            <esp-web-install-button manifest="firmware/manifest.json">
+                <button slot="activate" class="btn">Connect</button>
+                <span slot="unsupported">Ah snap, your browser doesn't work!</span>
+                <span slot="not-allowed">Ah snap, you are not allowed to use this on HTTP!</span>
+            </esp-web-install-button>
+        </div>
+    </body>
 </html>
