--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
 
             .heading {
                 margin: 0;
+                text-align: center;
             }
 
             .subheading {
                 margin: 0;
+                text-align: center;
             }
 
             .btn{
