--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="segment-picker" id="segment-picker">
             <input type="radio" id="rfid-rtc" name="firmware" value="firmware/rfid_rtc.json" checked>
             <label for="rfid-rtc">RFID Scanner (RTC)</label>
-            <input type="radio" id="rfid" name="firmware" value="firmware/rfid.json" checked>
+            <input type="radio" id="rfid" name="firmware" value="firmware/rfid.json">
             <label for="rfid">RFID Scanner</label>
             <input type="radio" id="proximity" name="firmware" value="firmware/proximity.json">
             <label for="proximity">Proximity Scanner</label>
