fixed default firmware is wrongly set to rfid scanner (without rtc)

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </div>
 
         <div class="esp-web-tool">
-            <esp-web-install-button id="webInstallButton" manifest="firmware/rfid.json">
+            <esp-web-install-button id="webInstallButton" manifest="firmware/rfid_rtc.json">
                 <button slot="activate" class="btn">Connect</button>
                 <span slot="unsupported" class="browser-error">Your browser does not support webflashing</span>
                 <span slot="not-allowed" class="http-error">Webflashing is not allowed on HTTP</span>
