--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Firmware Webflasher</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" type="image/png" href="/favicon.png"/>
+        <link rel="icon" type="image/png" href="/favicon.png?"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap">
         <script type="module" src="https://unpkg.com/esp-web-tools/dist/web/install-button.js?module"></script>
 
