shortened segment labels

--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
 
         <div class="segment-picker" id="segment-picker">
             <input type="radio" id="rfid-rtc" name="firmware" value="firmware/rfid_v3.json" checked>
-            <label for="rfid-rtc">RFID Scanner v3</label>
+            <label for="rfid-rtc">RFID Scanner</label>
             <input type="radio" id="rfid" name="firmware" value="firmware/rfid_rtc.json">
-            <label for="rfid">RFID Scanner (RTC)</label>
+            <label for="rfid">RFID Scanner</label>
             <input type="radio" id="proximity" name="firmware" value="firmware/proximity.json">
             <label for="proximity">Proximity Scanner</label>
             <input type="radio" id="hid" name="firmware" value="firmware/hid.json">
